# copycat

./: LICENSE  README.md  audio_capture_and_transcribe.py  chatgpt_persona_templates.py  main.kv  main.py  pyproject.toml  talk2persona.py
